HBase Async - User visible changes.

* Version 1.2.0 (2012-??-??) [???????]

Noteworthy changes:
  - Add support for HBase 0.92, as the on-wire RPC format underwent
    significant changes that aren't compatible with previous versions.
    NOTE: HBase never had a release in the 0.91 branch, and as such
    this branch isn't fully supported.

New public APIs:
  - KeyValue now supports timestamps.
  - HBaseClient now accepts a custom socket factory or executor, which can
    be used to share an existing thread pool instead of having its own.


* Version 1.1.0 (2011-12-22) [1272a9e]

Noteworthy changes:
  - Add support for CDH3b3's non-standard authentication code.  This support
    is enabled by specifying the Java system property "org.hbase.async.cdh3b3".
  - Add support for HBase 0.90, as on-wire protocol changed in a non-backward
    compatible way for the `get' RPC.
  - Fix a dumb mistake in the `memcmp()' version that uses an offset and a
    length.  This function wasn't called either by asynchbase or by OpenTSDB.
  - Bytes.pretty() no longer renders control characters like `^X' (which is
    similar to what `cat -t' does).  Instead they're now rendered like other
    non-ASCII characters, using the hex notation `\xXX'.  This makes the output
    non-ambiguous and pastable into a Python shell.
  - HBaseClient.shutdown() could callback too early, while the shutdown
    sequence was still running.
  - After doing a full-table scan, calling Scanner.close() would trigger an
    error as the scanner would attempt to close itself again.
  - When disconnecting from a RegionServer, if the socket wasn't getting
    closed immediately, a Deferred could get called back twice, which would
    trigger an AssertionError.
  - DeleteRequest used to delete the last version of a cell, which wasn't the
    intended behavior.  It has been changed to delete all the previous
    versions of a cell.
  - Fixed various other race conditions during startup / shutdown that would