@@ -7,6 +7,8 @@ Noteworthy changes:
     significant changes that aren't compatible with previous versions.
     NOTE: HBase never had a release in the 0.91 branch, and as such
     this branch isn't fully supported.
+  - When talking to HBase 0.92, we automatically batch `DeleteRequests'
+    with `PutRequests'.
 
 New public APIs:
   - KeyValue now supports timestamps.
